--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.24.4",
     "sass-loader": "^8.0.2"
+  },
+  "dependencies": {
+    "npm-watch": "^0.6.0"
   }
 }
