--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass-loader": "^8.0.2"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.12.0",
     "npm-watch": "^0.6.0"
   }
 }
