--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "laravel-mix": "^5.0.1",
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.24.4",
-    "sass-loader": "^8.0.2"
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.12.0",
+    "jquery": "^3.4.1",
     "npm-watch": "^0.6.0"
   }
 }
